--- a/RankingVideojuegos/RankingVideojuegos/Views/Shared/_Layout.cshtml
+++ b/RankingVideojuegos/RankingVideojuegos/Views/Shared/_Layout.cshtml
@@ -43,11 +43,11 @@
         </main>
     </div>
 
-    <footer class="footer mt-auto">
+  @*   <footer class="footer mt-auto">
         <div class="container">
             &copy; 2025 - Ranking de Videojuegos - <a asp-controller="Home" asp-action="Privacy">Privacidad</a>
         </div>
-    </footer>
+    </footer> *@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
