--- a/RankingVideojuegos/RankingVideojuegos/Views/Videojuegos/Edit.cshtml
+++ b/RankingVideojuegos/RankingVideojuegos/Views/Videojuegos/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RankingVideojuegos.Models.Videojuego
 
 @{
-    ViewData["Title"] = "Editar videojuego";
+    ViewData["Title"] = "Editar videojuego " + Model.Titulo;
 }
 
 <h2>@ViewData["Title"]</h2>
