--- a/RankingVideojuegos/RankingVideojuegos/Views/Videojuegos/Index.cshtml
+++ b/RankingVideojuegos/RankingVideojuegos/Views/Videojuegos/Index.cshtml
@@ -57,7 +57,7 @@
 
                         @if (!string.IsNullOrEmpty(juego.TrailerEmbedUrl))
                         {
-                            <button class="btn btn-outline-dark btn-sm" data-bs-toggle="modal" data-bs-target="#modalTrailer" data-url="@juego.TrailerEmbedUrl">
+                            <button class="btn btn-outline-light btn-sm" data-bs-toggle="modal" data-bs-target="#modalTrailer" data-url="@juego.TrailerEmbedUrl">
                                 Ver tráiler
                             </button>
                         }
