--- a/RankingVideojuegos/RankingVideojuegos/Views/Shared/_Layout.cshtml
+++ b/RankingVideojuegos/RankingVideojuegos/Views/Shared/_Layout.cshtml
@@ -14,9 +14,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark border-bottom border-purple shadow-sm">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <a class="navbar-brand fw-bold neon-title-purple" asp-area="" asp-controller="Videojuegos" asp-action="Index">
                     🎮 RankingVideojuegos
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
@@ -28,7 +28,7 @@
                             <a class="nav-link" asp-controller="Videojuegos" asp-action="Index">Videojuegos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="Privacy">Política de privacidad</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Privacy">Privacidad</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -37,17 +37,19 @@
         </nav>
     </header>
 
+
     <div class="container py-4">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-  @*   <footer class="footer mt-auto">
+    @* <footer class="footer mt-auto py-3 text-center">
         <div class="container">
-            &copy; 2025 - Ranking de Videojuegos - <a asp-controller="Home" asp-action="Privacy">Privacidad</a>
+            <small>&copy; 2025 - Ranking de Videojuegos - <a asp-controller="Home" asp-action="Privacy">Privacidad</a></small>
         </div>
     </footer> *@
+
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -60,3 +62,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
