--- a/RankingVideojuegos/RankingVideojuegos/Views/Shared/_LoginPartial.cshtml
+++ b/RankingVideojuegos/RankingVideojuegos/Views/Shared/_LoginPartial.cshtml
@@ -2,25 +2,34 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
+<ul class="navbar-nav align-items-center">
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <li class="nav-item me-2">
+            <a class="nav-link neon-title-purple fw-semibold" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+                👋 Hola, @User.Identity?.Name!
+            </a>
+        </li>
+        <li class="nav-item">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout"
+                  asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="btn btn-neon btn-sm">
+                    Cerrar sesión
+                </button>
+            </form>
+        </li>
+    }
+    else
+    {
+        <li class="nav-item me-2">
+            <a class="btn btn-neon-light btn-sm" asp-area="Identity" asp-page="/Account/Register">
+                Registrarse
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="btn btn-neon btn-sm" asp-area="Identity" asp-page="/Account/Login">
+                Iniciar sesión
+            </a>
+        </li>
+    }
 </ul>
