--- a/RankingVideojuegos/RankingVideojuegos/Views/Videojuegos/Create.cshtml
+++ b/RankingVideojuegos/RankingVideojuegos/Views/Videojuegos/Create.cshtml
@@ -6,9 +6,10 @@
 
 <div class="container mt-5" data-aos="fade-up">
     <div class="edit-form" data-aos="zoom-in" data-aos-duration="600">
-        <h2 data-aos="fade-down" data-aos-delay="100">
+        <h2 class="neon-title-purple text-light" data-aos="fade-down" data-aos-delay="100">
             Añadir nuevo videojuego
         </h2>
+
 
         <form asp-action="Create" enctype="multipart/form-data" method="post">
             <div class="mb-3" data-aos="fade-right" data-aos-delay="150">
