--- a/RankingVideojuegos/RankingVideojuegos/wwwroot/css/site.css
+++ b/RankingVideojuegos/RankingVideojuegos/wwwroot/css/site.css
@@ -362,3 +362,61 @@ footer {
         color: var(--purple-outline);
         font-weight: 600;
     }
+
+   /* Titulos*/
+.neon-title-white {
+    color: #ffffff;
+    text-shadow: 0 0 5px rgba(255, 255, 255, 0.6), 0 0 10px rgba(255, 255, 255, 0.4), 0 0 15px rgba(255, 255, 255, 0.3);
+}
+
+.neon-title-purple {
+    color: #9f7aea;
+    text-shadow: 0 0 5px rgba(159, 122, 234, 0.6), 0 0 10px rgba(159, 122, 234, 0.4), 0 0 15px rgba(159, 122, 234, 0.3);
+}
+
+
+/*layout*/
+.border-purple {
+    border-color: #9f7aea !important;
+}
+
+.navbar {
+    background-color: #1f1f1f !important;
+    border-bottom: 2px solid #9f7aea;
+}
+
+.nav-link {
+    color: #e0e0e0 !important;
+    transition: color 0.3s ease;
+}
+
+    .nav-link:hover {
+        color: #d6bcfa !important;
+        text-shadow: 0 0 5px rgba(159, 122, 234, 0.5);
+    }
+
+.footer {
+    background-color: #1f1f1f;
+    color: #aaa;
+    border-top: 1px solid #292929;
+}
+
+    .footer a {
+        color: #9f7aea;
+        text-decoration: none;
+    }
+
+        .footer a:hover {
+            color: #d6bcfa;
+            text-shadow: 0 0 6px rgba(159, 122, 234, 0.6);
+        }
+/* Estilo personalizado para inputs deshabilitados */
+/* Input deshabilitado con estilo neón personalizado */
+input.form-control:disabled {
+    background-color: #1f1f1f !important;
+    color: #d0d0d0 !important;
+    border: 1px solid #9f7aea !important;
+    box-shadow: 0 0 6px rgba(159, 122, 234, 0.4);
+    opacity: 1 !important;
+    font-weight: 500;
+}
